# kmer_denovo_filter

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  integration-test.yml
docs/: kraken2_bacterial_detection.md
examples/HG002_trio/: README.md  create_igv_review_tsv.sh  extract_mini_crams.sh  identify_putative_denovos.sh  run_hg002_trio.sh
scripts/: HG002_GRCh38_1_22_v4.2.1_benchmark.vcf.gz.tbi  HG003_GRCh38_1_22_v4.2.1_benchmark.vcf.gz.tbi  HG004_GRCh38_1_22_v4.2.1_benchmark.vcf.gz.tbi  build_mini_ref.py  compare_regions.py  download_giab_dnm_testdata.sh  download_kraken2_db.sh
src/kmer_denovo_filter/: __init__.py  __main__.py  cli.py  kmer_utils.py  pipeline.py  report.py  utils.py
tests/: README.md  conftest.py  helpers.py  test_cli.py  test_compare_regions.py  test_dockerfile_kraken2_install.py  test_download_kraken2_db_script.py  test_example_output.py  test_example_output_discovery.py  test_integration_comparison.py  test_kmer_utils.py  test_kraken2.py  test_kraken2_bed.py  test_kraken2_http_integration.py  test_kraken2_integration.py  test_pipeline.py  test_report.py
tests/discovery/: test_pipeline.py
tests/example_output/: annotated.vcf.gz.tbi  metrics.json  summary.txt
tests/example_output_discovery/: giab_discovery.bed  giab_discovery.comparison.txt  giab_discovery.informative.bam  giab_discovery.informative.bam.bai  giab_discovery.kmer_coverage.bedgraph  giab_discovery.metrics.json  giab_discovery.read_coverage.bed  giab_discovery.summary.txt  giab_discovery.sv.bedpe
tests/vcf/: test_pipeline.py
(+21 files in other folders)
